     (Aaron Bentley)

   * ``commit`` now succeeds when a checkout and its master branch share a
     repository.  (Aaron Bentley, #177592)

   * Fixed Unicode encoding error in ``ignored`` when the output is
     redirected to a pipe. (Lukáš Lalinský)

   * Fix traceback when sending large response bodies over the smart protocol
     on Windows. (Andrew Bennetts, #115781)

   * pycurl authentication handling was broken and incomplete. Fix handling of
     user:pass embedded in the urls.
     (Vincent Ladeuil, #177643)

   * ``reconfigure`` is able to convert trees into lightweight checkouts.
     (Aaron Bentley)

   * Reduce lockdir timeout to 0 when running ``bzr serve``.  (Andrew Bennetts,
     #148087)

   * Test that the old ``version_info_format`` functions still work, even
     though they are deprecated. (John Arbash Meinel, ShenMaq, #177872)

   * Transform failures no longer cause ImmortalLimbo errors (Aaron Bentley,
     #137681)

   * ``uncommit`` works even when the commit messages of revisions to be
     removed use characters not supported in the terminal encoding.
     (Aaron Bentley)

   * When dumb http servers return whole files instead of the requested ranges,
     read the remaining bytes by chunks to avoid overflowing network buffers.
     (Vincent Ladeuil, #175886)

  DOCUMENTATION:

   * Reference material has now be moved out of the User Guide and added
     to the User Reference. The User Reference has gained 4 sections as
     a result: Authenication Settings, Configuration Settings, Conflicts
     and Hooks. All help topics are now dumped into text format in the
     doc/en/user-reference directory for those who like browsing that
     information in their editor. (Ian Clatworthy)

  INTERNALS:

    * find_* methods available for BzrDirs, Branches and WorkingTrees.
      (Aaron Bentley)

    * Help topics can now be loaded from files. 
      (Ian Clatworthy, Alexander Belchenko)
